fixed css and spacing

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -208,8 +208,13 @@ fieldset[disabled] .btn-xl.active {
     background-color: #{{ site.data.template.color.primary }};
 }
 
+a.navbar-brand.navbar-toggle{
+    border-color: rgba(255, 255, 255, 0);
+    background:rgba(255, 255, 255, 0);
+}
+
 .navbar-default .navbar-toggle .icon-bar {
-    background-color: #fff;
+    background-color: #ff;
 }
 
 .navbar-default .navbar-toggle:hover,
@@ -258,7 +263,7 @@ fieldset[disabled] .btn-xl.active {
     }
 
     .navbar-default .navbar-brand {
-        font-size: 2em;
+        /*font-size: 2em;*/
         -webkit-transition: all .3s;
         -moz-transition: all .3s;
         transition: all .3s;
@@ -1005,12 +1010,14 @@ blockquote::before{
     width: 100%; 
     height: 380px;
 }
-
+.navbar-brand img{
+    width: 8%;
+}
 @media only screen and (max-width: 768px) {
     
     .navbar-brand img {
-        padding-top: 12px;
-        width: 15%;
+        padding: 8px;
+        width: 13%;
     }
     .quote{ 
         margin-top: 10px;
